--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Spaced Repetition</title>
     <link href="./styles/main.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/add-to-calendar-button@2" async defer></script>
+    <link rel="icon" href="./styles/favicon.ico" type="image/x-icon"/>
 </head>
 
 <body>
