--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
     <div id="coffeebutton">
         <a href="https://www.buymeacoffee.com/gothamstudios"><img src="https://img.buymeacoffee.com/button-api/?text=Help support development&emoji=☕&slug=gothamstudios&button_colour=5F7FFF&font_colour=ffffff&font_family=Lato&outline_colour=000000&coffee_colour=FFDD00" /></a>
     </div>
+<footer style="text-align:center;padding:10px;">&copy; Copyright 2023 https://study.gothamstudios.us</footer>
     <script src="./scripts/info.js"></script>
 </body>
 
