--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <title>Spaced Repetition</title>
     <link href="./styles/main.css" rel="stylesheet" type="text/css" />
     <link href="./styles/startPage.css" rel="stylesheet" type="text/css" />
-    <link href="./styles/themes/dark.css" rel="stylesheet" type="text/css" id="themeStyle" />
+    <link rel="stylesheet" type="text/css" id="themeStyle" />
+    <script src="./scripts/info.js"></script>
 </head>
 
 <body>
@@ -50,8 +51,8 @@
         <a class="item" href="index.html" id="hm">Guide</a>
         <a> | </a>
         <a class="item" href="spacedTopics.html" id="sbj">Topic Scheduler</a>
-        <a> | </a>
-        <a class="item" id="test">Test Scheduler</a>
+        <!-- <a> | </a>
+        <a class="item" id="test">Test Scheduler</a> -->
     </div>
 
     <h1>Spaced Repetition Site Guide</h1>
@@ -139,8 +140,7 @@
     <div id="coffeebutton">
         <a href="https://www.buymeacoffee.com/gothamstudios"><img src="https://img.buymeacoffee.com/button-api/?text=Help support development&emoji=☕&slug=gothamstudios&button_colour=5F7FFF&font_colour=ffffff&font_family=Lato&outline_colour=000000&coffee_colour=FFDD00" /></a>
     </div>
-<footer style="text-align:center;padding:10px;">&copy; Copyright 2023 https://study.gothamstudios.us</footer>
-    <script src="./scripts/info.js"></script>
+    <footer style="text-align:center;padding:10px;">&copy; Copyright 2023 https://study.gothamstudios.us - v0.7</footer>
 </body>
 
 </html>
