--- a/spacedTopics.html
+++ b/spacedTopics.html
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Spaced Repetition</title>
     <link href="./styles/main.css" rel="stylesheet" type="text/css" />
-    <link href="./styles/themes/dark.css" rel="stylesheet" type="text/css" id="themeStyle" />
+    <link rel="stylesheet" type="text/css" id="themeStyle" />
     <script src="https://cdn.jsdelivr.net/npm/add-to-calendar-button@2" async defer></script>
 </head>
 
@@ -50,8 +50,8 @@
         <a class="item" href="index.html" id="hm">Guide</a>
         <a> | </a>
         <a class="item" href="spacedTopics.html" id="sbj">Topic Scheduler</a>
-        <a> | </a>
-        <a class="item" id="test">Test Scheduler</a>
+        <!-- <a> | </a>
+        <a class="item" id="test">Test Scheduler</a> -->
     </div>
 
     <div id="mainBody">
@@ -107,8 +107,8 @@
             <button class="cButton" id="goback">Start Over</button>
         </div>
     </div>
-    <script type="module" src="./scripts/main.js"></script>
 
+    <script src="./scripts/main.js"></script>
 </body>
 
 </html>
