--- a/index.html
+++ b/index.html
@@ -88,38 +88,38 @@
         <ol>
             <li>Go to the Topic Scheduler page<br>
                 <a>
-                    <img src="./images/guide/steps/1.png"></img>
+                    <img src="./images/guide/steps/1.webp"></img>
                 </a>
             </li>
             <li>Enter your test date at the top<br>
                 <a>
-                    <img src="./images/guide/steps/2.png"></img>
+                    <img src="./images/guide/steps/2.webp"></img>
                 </a>
             </li>
             <li>If you would like to use the same year for everything (so that you don&#39;t need to type it in repeatedly), check the box.</li>
             <li>Enter the number of topics you need to study.<br>
                 <a>
-                    <img src="./images/guide/steps/3.png"></img>
+                    <img src="./images/guide/steps/3.webp"></img>
                 </a>
             </li>
             <li>Enter a name for each topic. If you leave the names blank, a number will be assigned.<br>
                 <a>
-                    <img src="./images/guide/steps/4.png"></img>
+                    <img src="./images/guide/steps/4.webp"></img>
                 </a>
             </li>
             <li>Enter the dates that you would like to start studying each topic. This could be the day you learn the material, or just the day you plan on starting.<br>
                 <a>
-                    <img src="./images/guide/steps/5.png"></img>
+                    <img src="./images/guide/steps/5.webp"></img>
                 </a>
             </li>
             <li>Finally, rate the difficulty of the topic. The harder a topic is, the more often it should be studied.<br>
                 <a>
-                    <img src="./images/guide/steps/6.png"></img>
+                    <img src="./images/guide/steps/6.webp"></img>
                 </a>
             </li>
             <li>Hit calculate!<br>
                 <a>
-                    <img src="./images/guide/steps/7.png"></img>
+                    <img src="./images/guide/steps/7.webp"></img>
                 </a>
             </li>
         </ol>
