--- a/print-page.html
+++ b/print-page.html
@@ -17,8 +17,8 @@
 
     <link href="./styles/print.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" id="themeStyle" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
 </head>
 
 <body>
@@ -28,6 +28,16 @@
             <p>If your download doesn't start automatically, please refresh this page.</p>
             <a href="./spacedTopics.html"><button id="themebutton">Back to main site</button></a>
         </div>
+        <footer id="mainFoot" style="text-align:center;padding:10px;">
+            <div class="bottomlinks">
+                <ul>
+                    <li><a href="mailto:kmusial@gothamstudios.us" target="_blank">Contact</a></li> |
+                    <li><a href="https://github.com/GothamGamer117/SpacedRepetition" target="_blank">Github</a></li> |
+                    <li><a href="https://forms.gle/HKm8mLoDdUts6Y889" target="_blank">Feedback/Bug Report</a></li>
+                </ul>
+            </div>
+            &copy; Copyright 2023 Kaitlyn Musial https://study.gothamstudios.us - v0.7.2
+        </footer>
     </div>
     <div id="cover"></div>
     <div id="printPage" class="page">
@@ -42,7 +52,7 @@
             </div>
             <div id="months">
             </div>
-            <footer style="text-align:center;padding:10px;">https://study.gothamstudios.us - v0.7.1</footer>
+            <footer id="pageFoot" style="text-align:center;padding:10px;">&copy; Copyright 2023 Kaitlyn Musial https://study.gothamstudios.us - v0.7.2</footer>
         </div>
     </div>
 
