--- a/spacedTopics.html
+++ b/spacedTopics.html
@@ -23,8 +23,9 @@
 </head>
 
 <body>
-    <div id="testMod">
-        <button data-open-modal id="themebutton">Theme</button>
+    <div id="topLeftButtons">
+        <button data-open-modal class="darkButton topLeft" id="themebutton">Theme</button>
+        <!-- <button data-open-modal class="darkButton topLeft" id="savebutton">Saves</button> -->
 
         <dialog data-modal>
             <div id="themebox">
@@ -107,6 +108,16 @@
         </div>
     </div>
 
+    <footer style="text-align:center;padding:10px;">
+        <div class="bottomlinks">
+            <ul>
+                <li><a href="mailto:kmusial@gothamstudios.us" target="_blank">Contact</a></li> |
+                <li><a href="https://github.com/GothamGamer117/SpacedRepetition" target="_blank">Github</a></li> |
+                <li><a href="https://forms.gle/HKm8mLoDdUts6Y889" target="_blank">Feedback/Bug Report</a></li>
+            </ul>
+        </div>
+        &copy; Copyright 2023 Kaitlyn Musial https://study.gothamstudios.us - v0.7.2
+    </footer>
     <script src="./scripts/main.js"></script>
 </body>
 
