--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <div id="topLeftButtons">
         <button data-open-modal class="darkButton topLeft" id="themebutton">Theme</button>
-        <!-- <button data-open-modal class="darkButton topLeft" id="savebutton">Saves</button> -->
+        <!-- <button save-open-modal class="darkButton topLeft" id="savebutton">Saves</button> -->
 
         <dialog data-modal>
             <div id="themebox">
@@ -42,6 +42,9 @@
                     </form>
                 </div>
             </div>
+        </dialog>
+        <dialog save-modal>
+            hello
         </dialog>
     </div>
     <div id="topBar">
@@ -149,7 +152,7 @@
                 <li><a href="https://forms.gle/HKm8mLoDdUts6Y889" target="_blank">Feedback/Bug Report</a></li>
             </ul>
         </div>
-        &copy; Copyright 2023 Kaitlyn Musial https://study.gothamstudios.us - v0.7.2
+        &copy; Copyright 2023 Kaitlyn Musial https://study.gothamstudios.us - v0.8.0
     </footer>
     <script src="./scripts/info.js"></script>
 </body>
