--- a/spacedTopics.html
+++ b/spacedTopics.html
@@ -25,7 +25,7 @@
 <body>
     <div id="topLeftButtons">
         <button data-open-modal class="darkButton topLeft" id="themebutton">Theme</button>
-        <!-- <button data-open-modal class="darkButton topLeft" id="savebutton">Saves</button> -->
+        <button save-open-modal class="darkButton topLeft" id="savebutton">Saves</button>
 
         <dialog data-modal>
             <div id="themebox">
@@ -42,6 +42,34 @@
                     </form>
                 </div>
             </div>
+        </dialog>
+        <dialog error-modal>
+            <form method="dialog">
+                <a class="pageTitle" id="noName">Please enter a save name.</a><br>
+                <a class="pageTitle" id="exists">A save with that name already exists</a><br>
+                <form method="dialog">
+                    <button class="modalButton" id="errorOkay">Okay</button>
+                </form>
+            </form>
+        </dialog>
+        <dialog save-modal>
+            <a class="pageTitle">Saves</a><br>
+            <form method="dialog">
+                <div id="loadSave">
+                    <!-- <p id="noSaves"></p> -->
+                    <p class="saveDialogTitle">Load Name:</p>
+                    <select save-data id="saveInput">
+
+                </select><br>
+                    <button class="modalButton" id="loadSaveButton">Load Save</button>
+                    <button class="modalButton" id="delConfig">Delete</button>
+                    <hr style="background-color:var(--title-color)">
+                </div>
+                <!-- <p class="saveDialogTitle">Save Test</p> -->
+                <label id="saveNameLabel" for="newSaveName">Save Name:</label><br/>
+                <input name="newSaveName" id="newSaveName" type="text" /><br>
+                <button class="darkButton modalButton" id="saveConfig">Save</button>
+            </form>
         </dialog>
     </div>
     <div id="topBar">
@@ -116,7 +144,7 @@
                 <li><a href="https://forms.gle/HKm8mLoDdUts6Y889" target="_blank">Feedback/Bug Report</a></li>
             </ul>
         </div>
-        &copy; Copyright 2023 Kaitlyn Musial https://study.gothamstudios.us - v0.7.2
+        &copy; Copyright 2023 Kaitlyn Musial https://study.gothamstudios.us - v0.8.0
     </footer>
     <script src="./scripts/main.js"></script>
 </body>
