--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Spaced Repetition</title>
-    <link href="./styles/main.css" rel="stylesheet" type="text/css" />
+    <link href="./styles/mobile.css" rel="stylesheet" type="text/css" />
     <link href="./styles/startPage.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" id="themeStyle" />
 </head>
@@ -152,7 +152,7 @@
                 <li><a href="https://forms.gle/HKm8mLoDdUts6Y889" target="_blank">Feedback/Bug Report</a></li>
             </ul>
         </div>
-        &copy; Copyright 2023 Kaitlyn Musial https://study.gothamstudios.us - v0.8.0
+        &copy; Copyright 2023 Kaitlyn Musial https://study.gothamstudios.us - v0.8.1
     </footer>
     <script src="./scripts/info.js"></script>
 </body>
