--- a/print-page.html
+++ b/print-page.html
@@ -23,11 +23,17 @@
 
 <body>
     <div id="downloaded">
-        <h1 id="top">Thanks for downloading!</h1>
-        <div class="background">
-            <p>If your download doesn't start automatically, please refresh this page.</p>
-            <a href="./spacedTopics.html"><button id="themebutton">Back to main site</button></a>
+        <div class="centerContent">
+            <h1 id="top">Thanks for downloading!</h1>
+            <div class="animation">
+                <div class="heart"></div>
+            </div>
+            <div class="background">
+                <p>If your download doesn't start automatically, please refresh this page.</p>
+                <a href="./spacedTopics.html"><button id="themebutton">Back to main site</button></a>
+            </div>
         </div>
+        
         <footer id="mainFoot" style="text-align:center;padding:10px;">
             <div class="bottomlinks">
                 <ul>
