--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <a class="item" id="test">Test Scheduler</a> -->
     </div>
 
-    <h1>Spaced Repetition Site Guide</h1>
+    <h1 id="title_guide">Spaced Repetition Site Guide</h1>
     <div class="main-content">
         <h2 id="what-is-spaced-repetition-">What is &quot;spaced repetition&quot;?</h2>
         <p>Spaced repetition is a powerful technique that will help you memorize information in much less time than it would take otherwise. The idea of spaced repetition is to space out your repetitions – or review sessions – so that you are not trying
@@ -152,7 +152,7 @@
                 <li><a href="https://forms.gle/HKm8mLoDdUts6Y889" target="_blank">Feedback/Bug Report</a></li>
             </ul>
         </div>
-        &copy; Copyright 2023 Kaitlyn Musial https://study.gothamstudios.us - v0.8.1
+        &copy; Copyright 2023 Kaitlyn Musial https://study.gothamstudios.us - v0.8.2
     </footer>
     <script src="./scripts/info.js"></script>
 </body>
