--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link href="./styles/mobile.css" rel="stylesheet" type="text/css" />
     <link href="./styles/startPage.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" id="themeStyle" />
+    <link rel="icon" type="image/x-icon" href="/styles/favicon.ico">
 </head>
 
 <body>
