--- a/spacedTopics.html
+++ b/spacedTopics.html
@@ -19,6 +19,7 @@
     <title>Spaced Repetition</title>
     <link href="./styles/main.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" id="themeStyle" />
+    <link rel="icon" type="image/x-icon" href="/styles/favicon.ico">
     <script src="https://cdn.jsdelivr.net/npm/add-to-calendar-button@2" async defer></script>
 </head>
 
