--- a/print-page.html
+++ b/print-page.html
@@ -36,7 +36,7 @@
                     <li><a href="https://forms.gle/HKm8mLoDdUts6Y889" target="_blank">Feedback/Bug Report</a></li>
                 </ul>
             </div>
-            &copy; Copyright 2023 Kaitlyn Musial https://study.gothamstudios.us - v0.8.2
+            &copy; Copyright 2023-2024 Kaitlyn Musial https://study.gothamstudios.us - v0.8.2
         </footer>
     </div>
     <div id="cover"></div>
@@ -52,7 +52,7 @@
             </div>
             <div id="months">
             </div>
-            <footer id="pageFoot" style="text-align:center;padding:10px;">&copy; Copyright 2023 Kaitlyn Musial https://study.gothamstudios.us - v0.8.2</footer>
+            <footer id="pageFoot" style="text-align:center;padding:10px;">&copy; Copyright 2023-2024 Kaitlyn Musial https://study.gothamstudios.us - v0.8.2</footer>
         </div>
     </div>
 
