--- a/spacedTopics.html
+++ b/spacedTopics.html
@@ -145,7 +145,7 @@
                 <li><a href="https://forms.gle/HKm8mLoDdUts6Y889" target="_blank">Feedback/Bug Report</a></li>
             </ul>
         </div>
-        &copy; Copyright 2023 Kaitlyn Musial https://study.gothamstudios.us - v0.8.2
+        &copy; Copyright 2023-2024 Kaitlyn Musial https://study.gothamstudios.us - v0.8.2
     </footer>
     <script src="./scripts/main.js"></script>
 </body>
